# office-open-xml-viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
.github/workflows/: deploy-storybook.yml  publish-vscode-extension.yml  publish.yml  vrt.yml
.storybook/: Introduction.mdx  main.ts  preview.ts
docs/dev-notes/: 2026-04-21-pptx-connector-release.md
pptx-parser/: Cargo.toml
pptx-parser/src/: lib.rs
src/: PptxViewer.stories.ts  docx.ts  index.ts  pptx.ts  presentation.ts  renderer.ts  types.ts  viewer.ts  vite-env.d.ts  worker.ts  xlsx.ts
tests/smoke/: layouts.spec.ts  playwright.config.ts  readme-screenshots.spec.ts
tests/visual/: check_debug.spec.ts  debug_elements.html  debug_elements.spec.ts  fixture.html  visual.spec.ts
