[workspace]
resolver = "2"
members = [
  "packages/pptx/parser",
  "packages/docx/parser",
  "packages/xlsx/parser",
  "packages/mcp-server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
zip = { version = "2", default-features = false, features = ["deflate-miniz"] }
roxmltree = "0.20"
base64 = "0.22"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
