[package]
name = "pptx-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# deflate-miniz uses pure-Rust miniz_oxide, safe for wasm32
zip = { version = "2", default-features = false, features = ["deflate-miniz"] }
roxmltree = "0.20"
console_error_panic_hook = "0.1"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
